2006-07-05  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/InputMap/allKeys.java: New test,
	* gnu/testlet/javax/swing/InputMap/clear.java: New test,
	* gnu/testlet/javax/swing/InputMap/constructor.java: New test,
	* gnu/testlet/javax/swing/InputMap/get.java: New test,
	* gnu/testlet/javax/swing/InputMap/getParent.java: New test,
	* gnu/testlet/javax/swing/InputMap/keys.java: New test,
	* gnu/testlet/javax/swing/InputMap/put.java: New test,
	* gnu/testlet/javax/swing/InputMap/remove.java: New test,
	* gnu/testlet/javax/swing/InputMap/setParent.java: New test,
	* gnu/testlet/javax/swing/InputMap/size.java: New test.

2006-07-05  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 

	* gnu/testlet/javax/swing/JTable/TableRobot.java
	(vTestArrowKeyNavigation): New test case.
	(testTable): Call vTestArrowKeyNavigation. 

2006-07-04  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java:
	(runner_in_err): Removed this field.
	(runner_esp): New field.
	(restartESP): New field.
	(finalize): Removed reference to runner_in_err.
	(initProcess): Removed reference to runner_in_err and created a new 
	ErrorStreamPrinter.
	(runTest): Restart the ErrorStreamPrinter if an IOException was caught
	during the last test run.
	(ErrorStreamPrinter): New class.

2006-07-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 

	* gnu/testlet/javax/swing/JComboBox/ComboRobot.java: New test.

2006-07-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 

	* gnu/testlet/javax/swing/JTable/TableRobot.java: Added GUI tag.
	* gnu/testlet/javax/swing/JTree/TreeRobot.java: New test.

2006-07-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 

	* gnu/testlet/javax/swing/JTable/TableRobot.java: New test.

2006-06-30  Mark Wielaard  <mark@klomp.org>

	* Harness.java (initProcess): Initialize TimeoutWatcher with
	runnerProcess.
	(runAllTests): Treat IOException as timeout.
	(TimeoutWatcher.runnerProcess): New field.